name:                mosh-clone
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Dave Hinton
maintainer:          beakerchu@googlemail.com
copyright:           © Dave Hinton, 2015
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  -- exposed-modules:     
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base
  hs-source-dirs:      src
  default-language:    Haskell2010
  -- default-extensions:  
  GHC-Options:         -Wall -Werror

executable mosh-intercept
  main-is:             Main.hs
  -- other-extensions:    
  build-depends:       base
                     , async
                     , base64-bytestring
                     , bytestring
                     , cereal
                     , cipher-aes128
                     , daemons
                     , errors
                     , lens
                     , network
                     , process
  hs-source-dirs:      intercept
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , TemplateHaskell
  GHC-Options:         -Wall -Werror

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  -- other-extensions:    
  build-depends:       base
                     , QuickCheck == 2.*
                     , test-framework
                     , test-framework-quickcheck2
                     , test-framework-th
  hs-source-dirs:      tests
  default-language:    Haskell2010
  default-extensions:  TemplateHaskell
  GHC-Options:         -Wall -Werror
