name:                mosh-clone
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Dave Hinton
maintainer:          beakerchu@googlemail.com
copyright:           © Dave Hinton, 2015
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Mosh
  -- other-modules:       
  -- other-extensions:    
  build-depends:       aeson
                     , base
                     , bytestring
                     , cereal
                     , cipher-aes128
                     , lens
                     , transformers
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , TemplateHaskell
  GHC-Options:         -Wall -Werror

executable mosh-mitm
  main-is:             Main.hs
  -- other-extensions:    
  build-depends:       mosh-clone
                     , aeson
                     , async
                     , base
                     , base64-bytestring
                     , bytestring
                     , cereal
                     , daemons
                     , errors
                     , lens
                     , network
                     , pipes
                     , pipes-aeson
                     , pipes-bytestring
                     , process
                     , text
                     , unordered-containers
  hs-source-dirs:      mitm
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , TemplateHaskell
  GHC-Options:         -Wall -Werror

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  -- other-extensions:    
  build-depends:       mosh-clone
                     , base
                     , bytestring
                     , cereal
                     , errors
                     , QuickCheck == 2.*
                     , test-framework
                     , test-framework-quickcheck2
                     , test-framework-th
  hs-source-dirs:      tests
  default-language:    Haskell2010
  default-extensions:  TemplateHaskell
  GHC-Options:         -Wall -Werror
